objects/vtse__Stand_Deliver__c.object
<CustomObject>
    <fields>
        <fullName>vtse__Anonymous_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, feedback will be visible to the user, but no reviewer names will be displayed.</inlineHelpText>
        <label>Anonymous Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vtse__Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Media Catalog where all video submissions will be organized.</inlineHelpText>
        <label>Catalog</label>
        <referenceTo>scormanywhere__Catalog__c</referenceTo>
        <relationshipLabel>Stand and Delivers</relationshipLabel>
        <relationshipName>Stand_Delivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vtse__Feedback_Type__c</fullName>
        <inlineHelpText>Public (feedback can be seen by anyone viewing the submission), Approvers (approvers can see feedback from other reviewers), or Private (reviewers and approvers can only see their own feedback).</inlineHelpText>
        <label>Feedback Visibility</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Approvers</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vtse__Hide_Feedback_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, users will see their average scores, but not individual reviews or scores.</inlineHelpText>
        <label>Hide Feedback Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vtse__Hide_Feedback_In_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, users will not be able to see reviewer feedback until the submission is ultimately approved or rejected.</inlineHelpText>
        <label>Hide Feedback In Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vtse__Maximum_Attempts__c</fullName>
        <inlineHelpText>Determine how many times a user can try again after having their submission rejected.</inlineHelpText>
        <label>Maximum Attempts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vtse__Media_Feedback__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, reviewers and approvers can record a video as part of their feedback.</inlineHelpText>
        <label>Video Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vtse__Minimum_Average_Score__c</fullName>
        <inlineHelpText>If a submission is not manually approved or rejected, determine approved/rejected based on average score when the shelf life closes.</inlineHelpText>
        <label>Minimum Average Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vtse__Minimum_Reviewers__c</fullName>
        <inlineHelpText>Determine how many reviews must be submitted by the shelf life in order to dynamically approve or reject the task. If minimum reviewers are not met, the task will remain In Review.</inlineHelpText>
        <label>Minimum Reviewers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vtse__Public__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Public tasks can be modified and assigned by managers to their teams.</inlineHelpText>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vtse__Shelf_Life__c</fullName>
        <inlineHelpText>If a submission is not manually approved or rejected, dynamically approve or reject the submission based on the average score. If left blank, a submission will require manual approval.</inlineHelpText>
        <label>Shelf Life</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vtse__Status__c</fullName>
        <inlineHelpText>Status will determine if users can register and/or submit videos for review.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vtse__Thumbnail_URL__c</fullName>
        <inlineHelpText>If no image is selected, the default image will be used.</inlineHelpText>
        <label>Thumbnail URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Stand and Deliver</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Stand and Deliver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stand and Deliver</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>